[tool.poetry]
name = "passcast"
version = "0.1.0"
description = "pass \(unix password store\) integration for Raycast"
authors = ["Khasbilegt.TS <khasbilegt.ts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
